# willdolater.dev

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md
.github/workflows/: cd.yml
blame_finder/: Cargo.toml
blame_finder/examples/: find_todos.rs
blame_finder/src/: helpers.rs  repo.rs
crates/blame_finder/: Cargo.toml
crates/blame_finder/examples/: find_todos.rs
crates/blame_finder/src/: blame.rs  error.rs  lib.rs  repo.rs  todo.rs
crates/leaderboard/: Cargo.toml
crates/leaderboard/src/: lib.rs
crates/oldest_todo_finder/: Cargo.toml
crates/oldest_todo_finder/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: constants.rs  logger.rs  main.rs  state.rs  templates.rs  todo_entrypoint.rs
crates/todo_templates/: Cargo.toml
crates/todo_templates/src/: lib.rs  templates.rs
crates/todo_templates/templates/: index_content.html  layout.html  leaderboard_content.html  result_content.html
data/: leaderboard.json
leaderboard/: cargo.toml
scripts/: deploy.sh
src/: main.rs
static/css/: styles.css
todo_templates/: askama.toml  cargo.toml
todo_templates/src/: lib.rs  templates.rs
todo_templates/templates/: error_content.html  layout.html  leaderboard_content.html
