[package]
name = "leaderboard"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true,  features = ["derive"] }
serde_json .workspace = true
chrono = { workspace = true,  features = ["serde"] }
tokio = { workspace = true,  features = ["sync"] }
thiserror = "1.0"
blame_finder = { path = "../blame_finder" }
tempfile = "3.18.0"
