[package]
name = "oldest-todo-finder"
version = "0.1.0"
edition = "2024"
authors = ["You"]
description = "A web application that finds the oldest TODO comment in Git repositories"

[dependencies]
blame_finder = { path = "../blame_finder" }
todo_templates = { path = "../todo_templates"}
leaderboard = { path = "../leaderboard"}

# Use workspace dependencies
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
html-escape.workspace = true
askama.workspace = true
chrono.workspace = true
