[package]
name = "oldest-todo-finder"
version = "0.1.0"
edition = "2024"
authors = ["You"]
description = "A web application that finds the oldest TODO comment in Git repositories"

[dependencies]
blame_finder = { path = "../blame_finder" }
todo_templates = { path = "../todo_templates"}
leaderboard = { path = "../leaderboard"}

# Use workspace dependencies
axum.workspace = true
futures.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
uuid = { workspace = true, features = ['v4']}
askama.workspace = true
env_logger.workspace = true
log.workspace = true
chrono.workspace = true
